# KeenTrader

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_zh.md  vcpkg.json
.github/workflows/: build.yml  clang-tidy.yml  cmake-multi-platform.yml  macos.yml  ubuntu.yml  windows.yml
app/: CMakeLists.txt
app/cta_strategy/: CMakeLists.txt  base.cpp  base.h  cta_strategy.cpp  cta_strategy.h  engine.cpp  engine.h  template.cpp  template.h
app/strategies/: CMakeLists.txt
app/strategies/dca_strategy/: CMakeLists.txt  dca_strategy.cpp  dca_strategy.h
app/strategies/grid_strategy/: CMakeLists.txt  grid_strategy.cpp  grid_strategy.h
app/strategies/r_break_strategy/: ArrayManager.cpp  ArrayManager.h  CMakeLists.txt  r_break_strategy.cpp  r_break_strategy.h
cmake/: dependents.cmake  init_target.cmake  options.cmake  variables.cmake
core/: CMakeLists.txt
core/api/: CMakeLists.txt  DateTime.cpp  DateTime.h  Defines.h  EventLoop.cpp  EventLoop.h  Globals.h  Logger.cpp  Logger.h  LoggerListeners.cpp  LoggerListeners.h  LoggerSimple.h  RestClient.cpp  RestClient.h  StringUtils.cpp  StringUtils.h  WebsocketClient.cpp  WebsocketClient.h
core/api/HttpClient/: Callback.h  Model.h  Sender.cpp  Sender.h
core/api/OSSupport/: ConsoleSignalHandler.cpp  ConsoleSignalHandler.h  CriticalSection.cpp  CriticalSection.h  Event.cpp  Event.h  File.cpp  File.h  Singleton.h  StackTrace.cpp  StackTrace.h  ThreadPool.h  WinStackWalker.h
core/engine/: CMakeLists.txt  app.cpp  app.h  constant.cpp  constant.h  converter.cpp  converter.h  engine.cpp  engine.h  event.cpp  event.h  exchange.cpp  exchange.h  object.cpp  object.h  settings.cpp  settings.h  utility.cpp  utility.h
core/event/: CMakeLists.txt  event.cpp  event.h
core/exchange/: CMakeLists.txt  algo_hmac.cpp  binance_exchange.cpp  binance_exchange.h  binance_linear_exchange.cpp  binance_linear_exchange.h  crypto_exchange.cpp  crypto_exchange.h  okx_exchange.cpp  okx_exchange.h  utils.cpp  utils.h
examples/: CMakeLists.txt
examples/trader/: CMakeLists.txt  main.cpp
libraries/: CMakeLists.txt
